<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.Profile">

    <ImageView
        android:id="@+id/searchIMG"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_150sdp"
        android:src="@drawable/ic_baseline_find_in_page_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/applyOnBaytTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_on_bayt"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchIMG" />
    <TextView
        android:id="@+id/creatCvNowTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creat_an_account_now"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@id/applyOnBaytTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/creat_acount_BTN"
        style="@style/Widget.Material3.Button.OutlinedButton"
        app:strokeWidth="0dp"
        android:backgroundTint="@color/blue"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creat_account"
        android:layout_marginTop="@dimen/_16sdp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/creatCvNowTV"
        app:layout_constraintStart_toStartOf="@+id/creatCvNowTV"
        app:layout_constraintTop_toBottomOf="@+id/creatCvNowTV" />

    <TextView
        android:id="@+id/haveAccountTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:text="@string/already_have_an_account"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creat_acount_BTN" />

    <TextView
        android:id="@+id/LoginTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textColor="@color/blue"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintStart_toEndOf="@+id/haveAccountTV"
        app:layout_constraintTop_toTopOf="@+id/haveAccountTV" />

</androidx.constraintlayout.widget.ConstraintLayout>